# treelox

./: Cargo.toml  README.md
src/: class.rs  environment.rs  error.rs  errors.rs  expr.rs  function.rs  interpreter.rs  lib.rs  main.rs  parser.rs  resolver.rs  scanner.rs  stmt.rs  token.rs
src/snapshots/: treelox__expr__tests__multiplication.snap  treelox__interpreter__tests__error.snap  treelox__interpreter__tests__grouping_math.snap  treelox__interpreter__tests__repl_err-2.snap  treelox__interpreter__tests__repl_err.snap  treelox__interpreter__tests__var_assign-2.snap  treelox__parser__tests__grouping.snap  treelox__parser__tests__parse_false.snap  treelox__parser__tests__parse_nil.snap  treelox__parser__tests__parse_true.snap  treelox__parser__tests__precedence_math.snap  treelox__scanner__tests__fn_call.snap  treelox__scanner__tests__var_assign.snap  treelox__scanner__tests__while_loop.snap
test-files/: assign.lox
tests/: cli.rs
tests/snapshots/: cli__lox@assign.lox.snap  cli__lox@counter.lox.snap  cli__lox@fib-rec.lox.snap  cli__lox@fib.lox.snap  cli__lox@hello.lox.snap  cli__lox@scope.lox.snap  cli__lox@simple.lox.snap  cli__reference_files@assignment__associativity.lox.snap  cli__reference_files@assignment__global.lox.snap  cli__reference_files@assignment__grouping.lox.snap  cli__reference_files@assignment__infix_operator.lox.snap  cli__reference_files@assignment__local.lox.snap  cli__reference_files@assignment__prefix_operator.lox.snap  cli__reference_files@assignment__syntax.lox.snap  cli__reference_files@assignment__to_this.lox.snap.new  (+88 more)
